refactor: Replace `Stream.collect(Collectors.toUnmodifiableList())` with `Stream.toList()`
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.migrate.util.ReplaceStreamCollectWithToList?organizationId=ODQ2MGExMTUtNDg0My00N2EwLTgzMGMtNGE1NGExMTBmZDkw#defaults%3DW3sidmFsdWUiOnRydWUsIm5hbWUiOiJjb252ZXJ0VG9MaXN0In1d

Co-authored-by: Moderne <team@moderne.io>